# doushicaiji

./: CMakeLists.txt  Makefile  ROI.cpp  auto_aim.cpp  auto_aim1.1.cpp  auto_aim1.1.h  resize.cpp
AutoAim/: CMakeLists.txt
AutoAim/include/: auto_aim.h  kalman_filter_by_opencv.h  pnp_solver.h
AutoAim/src/: auto_aim.cpp  kalman_filter_by_opencv.cpp
deepcam/: CMakeLists.txt
deepcam/include/: cam.h
deepcam/src/: cam.cpp
include/: auto_aim.h  cam.h  control_model.h  kalman_filter_by_opencv.h  pnp_solver.h  robot_model.h
libAim/: CMakeLists.txt
libAim/autoAim/: CMakeLists.txt
libAim/autoAim/include/: auto_aim.h  kalman_filter_by_opencv.h
libAim/autoAim/src/: auto_aim.cpp  kalman_filter_by_opencv.cpp
libAim/include/: aim_params.h  base_aim.h
libAim/infantryAutoAim/: CMakeLists.txt
libAim/infantryAutoAim/include/: infantry_auto_aim.h
libAim/infantryAutoAim/res/: camera_params.yaml  infantry_config.yaml
libAim/infantryAutoAim/src/: infantry_auto_aim.cpp
libAim/src/: base_aim.cpp
libAutoAim/: CMakeLists.txt
libAutoAim/include/: auto_aim.h  kalman_filter_by_opencv.h  pnp_solver.h
libAutoAim/src/: auto_aim.cpp  kalman_filter_by_opencv.cpp  pnp_solver.cpp
libBase/: CMakeLists.txt
libBase/baseClasses/: CMakeLists.txt
libBase/baseTools/: CMakeLists.txt
libBase/baseTools/include/: image_tool.h  pnp_solver.h
libBase/baseTools/src/: image_tool.cpp  pnp_solver.cpp
libHardWare/: CMakeLists.txt
libHardWare/mindVision/include/: mind_vision.h
libHardWare/mindVision/res/: light_red_config.yaml
libHardWare/mindVision/src/: mind_vision.cpp
libHardWare/serialPort/include/: serial_interface.h
libHardWare/serialPort/src/: serial_interface.cpp  serial_port_debug.cpp
libHardWare/usbCapture/: CMakeLists.txt
libTools/: CMakeLists.txt
libTools/include/: math_tools.h  time_tools.h
libTools/src/: math_tools.cpp  pnp_solver.cpp  time_tools.cpp
libbuff/: CMakeLists.txt
libbuff/include/: buff.h
libbuff/src/: buff.cpp
res/: main_config.yaml
src/: auto_aim.cpp  cam.cpp  control_model.cpp  kalman_filter_by_opencv.cpp  main.cpp  recognize_blue.cpp  robot_model.cpp  test.cpp
